# LEET_Practice

./: .gitignore  README.md  pyproject.toml
dev-docs/plan/issue_1/: 00-master-plan.md  01-storage.md  02-workbench.md  03-promotion.md
dev-docs/plan/issue_2/: 00-master-plan.md  01-draft-parser.md  02-local-cleanup.md  03-ux-integration.md  04-verification.md
docs/: data-layout.md  local-ocr-comparison.md  ocr-strategy.md  verification-workbench.md
src/leet_practice/: __init__.py  cli.py  compare_ocr_engines.py  models.py  ocr_crops.py  ocr_draft_formatting.py  verification.py
tests/: conftest.py  test_cli.py  test_ocr_prefill.py  test_promote_verified.py  test_suggest_question_crops.py  test_verification_storage.py  test_verification_workbench.py
tools/: compare_ocr_engines.py  prefill_assisted_question_drafts.py  suggest_question_crops.py
