[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leet-practice"
version = "0.1.0"
description = "Local-first LEET practice, grading, and wrong-answer review workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.24",
    "pillow>=10.0",
]
ocr = [
    "easyocr>=1.7.2",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
leet-practice = "leet_practice.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
