[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leet-practice"
version = "0.1.0"
description = "Local-first LEET practice, grading, and wrong-answer review workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.24",
    "pillow>=10.0",
]
# PaddlePaddle runtime is installed separately because CPU/GPU builds use
# different package names and Windows GPU wheels require a custom index.
ocr = [
    "paddleocr>=3.2,<3.8",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
leet-practice = "leet_practice.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
